van and breakfast vieew are done

--- a/my-app/src/Menu.scss
+++ b/my-app/src/Menu.scss
@@ -11,9 +11,9 @@ $black-color:#000000;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
-p{
+/* p{
     background-color: antiquewhite;
-}
+} */
 .center-self {
     display:flex;
     flex-direction: column;
