--- a/my-app/src/Menu.scss
+++ b/my-app/src/Menu.scss
@@ -60,6 +60,9 @@ width: 26%;
     font-size: 0.8rem;
     border: none;
 }
+.bkf-lunch{    
+    margin-left: 5%;
+}
 .bttn-breakfast {
     margin-top: 1rem;
     width: 20%;
